Ensure team member join link is not too long

--- a/src/app/styles/components/team/_team-members.scss
+++ b/src/app/styles/components/team/_team-members.scss
@@ -37,7 +37,7 @@
 
 .team-members__blurb-graf--url {
   font-family: $font-stack-sans;
-  font-size: 21px;
+  font-size: 18px;
 }
 
 // lists
